# CMakeWithCPP

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: CI.yml
BuildScripts/CMake/: BuildAndRunAllDemoApplicationTests.cmake  BuildAndRunAllGoogleTests.cmake  BuildAndRunAllGoogleTests.cmake.orig  BuildDemoLibrary.cmake  BuildFancySquareRoot.cmake  BuildGoogleTestFromSources.cmake.orig  BuildGoogleTestFromSources.cmake~HEAD  BuildGoogleTestFromSources.cmake~master  BuildGoogleTests.cmake  ExportDemoApplication.cmake  GetFancySquareRoot.cmake  InstallDemoApplicationLocally.cmake  ProvideGoogleTests.cmake  ProvideGoogleTests.cmake.orig  ProvideLegacyDependency.cmake  RunGoogleTests.cmake  SetBuildChainSpecifications.cmake  SetGlobalVariables.cmake  ToolCompliance.cmake
CoreFunctions/ComponentA/: ComponentA.cpp  ComponentA.hpp
CoreFunctions/ComponentB/: ComponentB.cpp  ComponentB.hpp
CoreFunctions/Interfaces/: CMakeLists.txt  Interface_A.hpp  Interface_B.cpp  Interface_B.hpp
Documentation/: Doxyfile
Documentation/html/: _formulas.tex  annotated.html  annotated_dup.js  classes.html  dir_000001_000003.html  dir_000002_000003.html  dir_000002_000008.html  dir_000005_000000.html  dir_000006_000000.html  dir_000007_000000.html  dir_232064f16afa86fd75b0728a465637c1.html  dir_232064f16afa86fd75b0728a465637c1.js  dir_5107bd5bc4342e24989ac8960fbc7d8b.html  dir_5107bd5bc4342e24989ac8960fbc7d8b.js  dir_5107bd5bc4342e24989ac8960fbc7d8b_dep.map  dir_5107bd5bc4342e24989ac8960fbc7d8b_dep.md5  dir_734f548c216f0ea9a61d9f7fe18db65a.html  dir_734f548c216f0ea9a61d9f7fe18db65a.js  dir_734f548c216f0ea9a61d9f7fe18db65a_dep.map  dir_734f548c216f0ea9a61d9f7fe18db65a_dep.md5  dir_9a00fb306065fe3a6cec19e0b6b17c9a.html  dir_9a00fb306065fe3a6cec19e0b6b17c9a.js  dir_9a00fb306065fe3a6cec19e0b6b17c9a_dep.map  dir_9a00fb306065fe3a6cec19e0b6b17c9a_dep.md5  dir_9e13f95ddd4736de735ed9cb717884a7.html  dir_9e13f95ddd4736de735ed9cb717884a7.js  dir_9e13f95ddd4736de735ed9cb717884a7_dep.map  dir_9e13f95ddd4736de735ed9cb717884a7_dep.md5  dir_a4d70e21ea62d2373fa1519c4b5aa214.html  dir_a4d70e21ea62d2373fa1519c4b5aa214.js  dir_c9c46a05fb4e6168e02cd48f7d2667e7.html  dir_c9c46a05fb4e6168e02cd48f7d2667e7.js  dir_c9c46a05fb4e6168e02cd48f7d2667e7_dep.map  dir_c9c46a05fb4e6168e02cd48f7d2667e7_dep.md5  dir_f0d9eb60006bd5ff230d2ace9a3f7de4.html  dir_f0d9eb60006bd5ff230d2ace9a3f7de4.js  dir_f0d9eb60006bd5ff230d2ace9a3f7de4_dep.map  dir_f0d9eb60006bd5ff230d2ace9a3f7de4_dep.md5  dir_ff4e8fb8de6615010d4f16a6b3d62fef.html  dir_ff4e8fb8de6615010d4f16a6b3d62fef.js  (+16 more)
Documentation/html/d0/d32/: _component_a_8hpp__dep__incl.map  _component_a_8hpp__dep__incl.md5
Documentation/html/d0/d40/: test_interface_b_8cpp.html  test_interface_b_8cpp.js  test_interface_b_8cpp_source.html
Documentation/html/d0/d8a/: md__home_dumbledore__documents__github__c_make_with_c_p_p__requirements__interface_b.html
Documentation/html/d1/d44/: class_component_b__coll__graph.map  class_component_b__coll__graph.md5
Documentation/html/d1/d7b/: class_component_a.html  class_component_a.js
Documentation/html/d1/de8/: _component_a_8cpp.html  _component_a_8cpp_source.html
Documentation/html/d2/d0b/: _component_b_2main_8cpp.html  _component_b_2main_8cpp.js  _component_b_2main_8cpp_source.html
Documentation/html/d2/d0d/: _component_b_8md.html  _component_b_8md_source.html
Documentation/html/d2/d62/: _legacy_8c__incl.map  _legacy_8c__incl.md5
Documentation/html/d2/d75/: _component_a_8cpp__incl.map  _component_a_8cpp__incl.md5
Documentation/html/d2/d8c/: _component_b_2test_8cpp__incl.map  _component_b_2test_8cpp__incl.md5
Documentation/html/d2/dc4/: _component_b_8hpp__dep__incl.map  _component_b_8hpp__dep__incl.md5  class_interface_a-members.html
Documentation/html/d3/d22/: _interface___b_8hpp.html  _interface___b_8hpp_source.html
Documentation/html/d3/d68/: _interfaces_2main_8cpp__incl.map  _interfaces_2main_8cpp__incl.md5
Documentation/html/d3/dcc/: _component_b_2main_8cpp__incl.map  _component_b_2main_8cpp__incl.md5
Documentation/html/d3/dd4/: _component_a_8hpp.html  _component_a_8hpp_source.html
Documentation/html/d4/d09/: class_interface_a__coll__graph.map  class_interface_a__coll__graph.md5
Documentation/html/d4/d4a/: _legacy_8h__dep__incl.map  _legacy_8h__dep__incl.md5
Documentation/html/d4/dac/: md__home_dumbledore__documents__github__c_make_with_c_p_p__requirements__component_a.html
Documentation/html/d5/d3e/: test_interface_a_8cpp.html  test_interface_a_8cpp.js  test_interface_a_8cpp_source.html
Documentation/html/d5/dce/: class_component_b-members.html
Documentation/html/d5/df6/: md__home_dumbledore__documents__github__c_make_with_c_p_p__requirements__interface_a.html
Documentation/html/d6/d19/: _component_b_2test_8cpp.html  _component_b_2test_8cpp.js  _component_b_2test_8cpp_source.html
Documentation/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  search.css  searchdata.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js
GoogleTests/: CMakeLists.txt
GoogleTests/ComponentA/: CMakeLists.txt  test.cpp
GoogleTests/ComponentB/: CMakeLists.txt  test.cpp
GoogleTests/Interfaces/: CMakeLists.txt  testInterfaceA.cpp  testInterfaceB.cpp
LegacyDependency/: Legacy.c  Legacy.h
Requirements/: ComponentA.md  ComponentB.md  InterfaceA.md  InterfaceB.md
(+66 files in other folders)
